# kumbuka

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  kumbuka  kumbuka.env.example  pyproject.toml  requirements.txt
docs/design_docs/: cookie-auth-auto-record.md
kumbuka/: __init__.py  __main__.py  audio_devices.py  calendar.py  calendar_scraper.py  config.py  filenames.py  meeting_filter.py  notes.py  notion.py  obsidian.py  processor.py  recorder.py  recording_lock.py  render.py  runtime.py  transcriber.py
kumbuka/daemon/: __init__.py  com.kumbuka.monitor.plist  monitor.py
kumbuka/prompts/: meeting.txt
tests/: conftest.py  test_audio_devices.py  test_calendar_scraper.py  test_meeting_filter.py  test_monitor.py  test_notes.py  test_obsidian.py  test_recorder.py
