[project]
name = "kumbuka"
version = "0.4.0"
description = "Local-first meeting recorder with AI-powered transcription"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "HypeBridge", email = "hello@hypebridge.com"}
]
keywords = ["meeting", "transcription", "whisper", "claude", "ai", "notion"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = [
    "numpy>=1.24.0",
    "sounddevice>=0.4.6",
    "httpx>=0.24.0",
    "google-api-python-client>=2.0.0",
    "google-auth-oauthlib>=1.0.0",
    "python-dotenv>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/daredammy/kumbuka"
Repository = "https://github.com/daredammy/kumbuka"
Issues = "https://github.com/daredammy/kumbuka/issues"

[project.scripts]
kumbuka = "kumbuka.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["kumbuka"]
